Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.5 (TBD)
-----------

- On entering a collection context (Collection.__enter__) a new anonymous GDAL
  environment is created if needed and entered. This makes `with
  fiona.open(...) as collection:` roughly equivalent to `with fiona.open(...)
  as collection, Env():`. This helps prevent bugs when Collections are created
  and then used later or in different scopes.

1.8.4 (2018-12-10)
------------------

- 3D geometries can now be transformed with a specified precision (#523).
- A bug producing a spurious DriverSupportError for Shapefiles with a "time"
  field (#692) has been fixed.
- Patching of the GDAL_DATA environment variable was accidentally left in place
  in 1.8.3 and now has been removed.

1.8.3 (2018-11-30)
------------------

- The RASTERIO_ENV config environment marker this project picked up from
  Rasterio has been renamed to FIONA_ENV (#665).
- Options --gdal-data and --proj-data have been added to the fio-env command so
  that users of Rasterio wheels can get paths to set GDAL_DATA and PROJ_LIB
  environment variables.
- The unsuccessful attempt to make GDAL and PROJ support file discovery and
  configuration automatic within collection's crs and crs_wkt properties has
  been reverted.  Users must execute such code inside a `with Env()` block or
  set the GDAL_DATA and PROJ_LIB environment variables needed by GDAL.

1.8.2 (2018-11-19)
------------------

Bug fixes:

- Raise FionaValueError when an iterator's __next__ is called and the session
  is found to be missing or inactive instead of passing a null pointer to
  OGR_L_GetNextFeature (#687).

1.8.1 (2018-11-15)
------------------

Bug fixes:

- Add checks around OSRGetAuthorityName and OSRGetAuthorityCode calls that will
  log problems with looking up these items.
- Opened data sources are now released before we raise exceptions in