@@ -2,6 +2,10 @@
 
 import os
 import sys
+try:
+    from unittest import mock
+except ImportError:
+    import mock
 
 import pytest
 
@@ -46,12 +50,14 @@ def test_ensure_env_decorator_sets_gdal_data(gdalenv, monkeypatch):
     assert f() == '/lol/wut'
 
 
-def test_ensure_env_decorator_sets_gdal_data_prefix(gdalenv, monkeypatch, tmpdir):
+@mock.patch("fiona._env.GDALDataFinder.find_file")
+def test_ensure_env_decorator_sets_gdal_data_prefix(find_file, gdalenv, monkeypatch, tmpdir):
     """fiona.env.ensure_env finds GDAL data under a prefix"""
     @ensure_env
     def f():
         return getenv()['GDAL_DATA']
 
+    find_file.return_value = None
     tmpdir.ensure("share/gdal/pcs.csv")
     monkeypatch.delenv('GDAL_DATA', raising=False)
     monkeypatch.setattr(_env, '__file__', str(tmpdir.join("fake.py")))
@@ -60,12 +66,14 @@ def test_ensure_env_decorator_sets_gdal_data_prefix(gdalenv, monkeypatch, tmpdir
     assert f() == str(tmpdir.join("share").join("gdal"))
 
 
-def test_ensure_env_decorator_sets_gdal_data_wheel(gdalenv, monkeypatch, tmpdir):
+@mock.patch("fiona._env.GDALDataFinder.find_file")
+def test_ensure_env_decorator_sets_gdal_data_wheel(find_file, gdalenv, monkeypatch, tmpdir):
     """fiona.env.ensure_env finds GDAL data in a wheel"""
     @ensure_env
     def f():
         return getenv()['GDAL_DATA']
 
+    find_file.return_value = None
     tmpdir.ensure("gdal_data/pcs.csv")
     monkeypatch.delenv('GDAL_DATA', raising=False)
     monkeypatch.setattr(_env, '__file__', str(tmpdir.join(os.path.basename(_env.__file__))))
@@ -73,12 +81,14 @@ def test_ensure_env_decorator_sets_gdal_data_wheel(gdalenv, monkeypatch, tmpdir)
     assert f() == str(tmpdir.join("gdal_data"))
 
 
-def test_ensure_env_with_decorator_sets_gdal_data_wheel(gdalenv, monkeypatch, tmpdir):
+@mock.patch("fiona._env.GDALDataFinder.find_file")
+def test_ensure_env_with_decorator_sets_gdal_data_wheel(find_file, gdalenv, monkeypatch, tmpdir):
     """fiona.env.ensure_env finds GDAL data in a wheel"""
     @ensure_env_with_credentials
     def f(*args):
         return getenv()['GDAL_DATA']
 
+    find_file.return_value = None
     tmpdir.ensure("gdal_data/pcs.csv")
     monkeypatch.delenv('GDAL_DATA', raising=False)
     monkeypatch.setattr(_env, '__file__', str(tmpdir.join(os.path.basename(_env.__file__))))
@@ -89,6 +99,7 @@ def test_ensure_env_with_decorator_sets_gdal_data_wheel(gdalenv, monkeypatch, tm
 def test_ensure_env_crs(path_coutwildrnp_shp):
     """Decoration of .crs works"""
     assert fiona.open(path_coutwildrnp_shp).crs
+
 
 def test_nested_gs_credentials(monkeypatch):
     """Check that rasterio.open() doesn't wipe out surrounding credentials"""
